# ansicpp

./: .gitignore  CMakeLists.txt  README.md
example/: README.md  test.cpp
examples/: README.md  test.cpp
include/: ansicpp.hpp
src/: ansicpp.cpp
test/: clear_screen.cpp  quick_test.cpp
